# whatsweb

./: CMakeLists.txt  README.md  clickable.yaml  content-hub.json  launcher.sh  manifest.json  manifest.json.in  push-apparmor.json  whatsweb-push.apparmor  whatsweb.apparmor  whatsweb.desktop
app/: ExportPage.qml  ImportPage.qml  Main.qml  NotificationsHowto.qml  Notifier.qml  ScreenSaverView.qml  SettingsButton.qml  SettingsPage.qml  Toast.qml  ubuntutheme.js
app/UCSComponents/: NumberEditRow.qml  SwitchRow.qml
qml-download-helper-module/: CMakeLists.txt  DownloadHelper.cpp  DownloadHelper.h  plugin.cpp  qmldir
qml-notify-module/: CMakeLists.txt  NotificationHelper.cpp  NotificationHelper.h  plugin.cpp  qmldir
test-notifications/: README.md  notify.sh
